# apis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml  业务主流程.md  优化与建议.md  流程对比.md  热更新机制.md  重构.md  重构2.md  项目比较.md
.github/workflows/: ci.yml
app/: auth.py  main.py
app/agent/: agent_factory.py  base_agent.py  executor_agent.py  middleware.py  triage_agent.py
app/api/: dependencies.py  main.py
app/api/middleware/: rate_limit.py
app/api/routes/: agent.py  agent_schemas.py  artifact_routes.py  auth_routes.py  chat_routes.py  feedback_routes.py  file.py  gateway_routes.py  session.py  skill_routes.py  task_routes.py
app/bootstrap/: __init__.py  container.py
app/common/: langfuse_client.py  llm.py  logger.py  redis.py  streaming.py  tag_parser.py  trace_context.py
app/config/: settings.py
app/context/: compressor.py  token_counter.py
app/document/: document_event_bus.py  document_status.py
app/evaluation/: offline_eval_agent.py  offline_eval_rag.py  online_eval.py
app/evaluation/datasets/: rag_datasets.json
app/gateway/: circuit_breaker.py  middleware.py  model_gateway.py  status_events.py  types.py
app/harness/: dead_letter.py  event_bus.py  subagent_discovery.py  subagent_hot_reloader.py  task_context.py  task_executor.py  tool_hot_reloader.py
app/infrastructure/: __init__.py  reliability.py
app/infrastructure/milvus/: __init__.py  vector_store.py
app/infrastructure/minio/: __init__.py  client.py
app/infrastructure/neo4j/: __init__.py  manager.py
app/infrastructure/postgres/: __init__.py  database.py  langgraph_store.py  repository.py
app/infrastructure/redis/: __init__.py  client.py
app/memory/: __init__.py  semantic_memory.py
app/modules/: __init__.py
app/modules/chat/: __init__.py  feedback.py  ports.py  service.py  (+1 more)
app/prompt/: __init__.py  triage_prompt.py
app/rag/: __init__.py  graph_rag.py  retrieval_pipeline.py
app/readers/: mineru_reader.py
app/service/: chat_service.py  embedding_service.py  feedback_service.py  file_service.py  rag_service.py  session_service.py
app/skill/: skill_manager.py
app/static/: index.html
app/storage/: __init__.py  base.py  db.py  vector_store.py
app/stores/: __init__.py  neo4j_manager.py  pg_store.py
app/tool/: __init__.py  approval_tools.py  bash_tool.py  current_time.py  file_system_tools.py  grep_tool.py  registry.py  skills_tool.py  task_tools.py  tavily_search.py  tool_search.py
app/utils/: file_parser.py  frontmatter_utils.py  image_recognition.py  text_splitter.py
deploy/: .env.production.example  compose.production.yaml  entrypoint.sh
docs/: agent-architecture-summary.md  architecture-optimization-plan.md  dodo-agent-analysis.md  project-structure-blueprint.md
docs/adr/: 0001-modular-monolith.md  0002-model-gateway.md  0003-task-persistence.md  0004-runtime-data-and-deployment.md  README.md
migrations/: README.md  env.py
migrations/versions/: 0001_initial_schema.py  0002_add_session_title.py
sql/: ai_db.sql  apis_agent_pg.sql
src/agent/: react_agent.py
src/api/: embedding_service.py  file_service.py  main.py  rag_service.py  session.py
src/apis_agent/: auth.py  main.py
src/common/: logger.py
src/config/: settings.py
src/dodo_agent/: main.py
src/storage/: base.py
src/tool/: file_parser.py  tavily_search.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_agent_chat.py  test_auth_isolation.py  test_base_repository.py  test_file_parser.py  test_reliability_features.py  test_runtime_container.py  test_session_api.py  test_settings.py  test_task_persistence.py  test_text_splitter.py  test_token_counter.py
tests/contract/: test_agent_chat.py  test_auth_isolation.py  test_runtime_container.py  test_task_persistence.py
tests/e2e/: README.md
tests/integration/: test_session_api.py
tests/unit/: test_base_repository.py  test_current_time_tool.py  test_file_parser.py  test_infrastructure.py  test_reliability_features.py  test_runtime_paths.py  test_settings.py  test_text_splitter.py
(+167 files in other folders)
