[project]
name = "apis-agent"
version = "0.1.0"
description = "Python LangChain/LangGraph 多智能体平台"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "deepagents>=0.6.12,<0.7.0",
    "langchain-community>=0.3.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.30.0",
    "psycopg>=3.2.0",
    "psycopg-pool>=3.2.0",
    "psycopg-binary>=3.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "minio>=7.2.0",
    "pymilvus>=2.4.0",
    "redis[hiredis]>=5.0.0",
    "tiktoken>=0.7.0",
    "python-pptx>=1.0.0",
    "httpx>=0.27.0",
    "langfuse>=3.0.0",
    "watchfiles>=1.0.0",
    "alembic>=1.14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.0",
    "mypy>=1.16.0",
    "deepeval>=2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: isolated logic and adapter tests without external services",
    "contract: HTTP, SSE and compatibility contract tests",
    "integration: tests requiring PostgreSQL or another real service",
    "e2e: deployment-level end-to-end tests",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
